--- a/open-me.html
+++ b/open-me.html
@@ -12,7 +12,7 @@
 		</style>
 		<body>
 			<h2 class="h2">Confirm your Personality</h2>
-			<form action="data/index.html"><center>
+			<form action="index.html"><center>
 				<div>
 					<input class="pass" type="password" required placeholder="Password" pattern="jwana" autofocus  dir="auto">
 				</div>
